--- a/client/src/pages/post/postPage.css
+++ b/client/src/pages/post/postPage.css
@@ -39,6 +39,10 @@
   position: relative;
 }
 
+.post-body {
+  word-break: break-all;
+}
+
 .post-pfp-btn {
   border-radius: 50%;
   transition: 0.1s;
